fix: added "swap" to font-display due to layout shift

--- a/root.css
+++ b/root.css
@@ -14,6 +14,7 @@
   font-size: 1.1rem;
   line-height: 1.5;
   letter-spacing: 0.027rem;
+  font-display: swap;
 }
 
 @media screen and (min-width: 1024px) {
